crates/kevin-domain/tests/snapshots/event_snapshots__memory.item_forgotten.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "reason": "contains a secret",
  "type": "memory.item_forgotten"
}
