crates/kevin-domain/tests/snapshots/event_snapshots__question.answered.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "answer": {
    "answered_by": "valentin",
    "selected": [
      "no"
    ]
  },
  "answered_by": "valentin",
  "type": "question.answered"
}
