crates/kevin-domain/tests/snapshots/event_snapshots__question.expired.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "applied_default": true,
  "type": "question.expired"
}
