crates/kevin-domain/tests/snapshots/event_snapshots__routing.score_updated.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "alias": "sonnet5-claude",
  "reset": false,
  "stats": {
    "alpha": 3.0,
    "attempts": 1,
    "beta": 1.0,
    "cost_samples": 1,
    "last_used": "2026-01-01T00:00:00Z",
    "quality_ema": 0.800000011920929,
    "quality_samples": 1,
    "successes": 1,
    "sum_cost_usd": "0.40",
    "sum_quality": 0.800000011920929,
    "sum_wall_ms": 60000
  },
  "success": true,
  "task_kind": "implement",
  "type": "routing.score_updated"
}
